Implement temporality support in V2 aggregator